add head-bar theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
     </div>
     <div class="app-pad-cotent">
         <app-headbar></app-headbar>
-        <router-outlet></router-outlet>
+        <div class="p-2">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
