--- a/src/app/model/test/pages/confirm-window/confirm-window.component.html
+++ b/src/app/model/test/pages/confirm-window/confirm-window.component.html
@@ -1,10 +1,10 @@
-<div class="card">
+<div class="card rounded-0">
     <div class="card-header">确认弹窗示例</div>
     <div class="card-block">
-        <button (click)="openDialog('success')" class="btn btn-outline-success">Success</button>
-        <button (click)="openDialog('info')" class="btn btn-outline-info">Info</button>
-        <button (click)="openDialog('warning')" class="btn btn-outline-warning">Warning</button>
-        <button (click)="openDialog('danger')" class="btn btn-outline-danger">Danger</button>
-        <button (click)="openDialog('default')" class="btn btn-outline-secondary">Default</button>
+        <button (click)="openDialog('success')" class="mt-1 btn btn-outline-success">Success</button>
+        <button (click)="openDialog('info')" class="mt-1 btn btn-outline-info">Info</button>
+        <button (click)="openDialog('warning')" class="mt-1 btn btn-outline-warning">Warning</button>
+        <button (click)="openDialog('danger')" class="mt-1 btn btn-outline-danger">Danger</button>
+        <button (click)="openDialog('default')" class="mt-1 btn btn-outline-secondary">Default</button>
     </div>
 </div>
