add pagination tool

--- a/src/app/model/test/pages/table-demo/table-demo.component.html
+++ b/src/app/model/test/pages/table-demo/table-demo.component.html
@@ -33,5 +33,7 @@
                 </tr>
             </tbody>
         </table>
+        <app-pagination></app-pagination>
+        <!-- <ngb-pagination class="pull-right" [ellipses]="true" [collectionSize]="120" [(page)]="page" [maxSize]="5"></ngb-pagination> -->
     </div>
 </div>
