--- a/src/app/system/components/menu/menu.component.html
+++ b/src/app/system/components/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="app-menu" [ngStyle]="{'background-color': themeConfig.bgColor,'color': themeConfig.fontColor}">
     <h4 class="menu-title">
-        <img class="ml-3 mr-2" src="/favicon.ico">
+        <img class="mr-3" src="/favicon.ico">
         <span>Hello Manager</span>
     </h4>
     <hr class="line">
