--- a/src/app/system/components/headbar/headbar.component.html
+++ b/src/app/system/components/headbar/headbar.component.html
@@ -1,8 +1,9 @@
 <div class="head-bar">
     <div class="row w-100">
         <div class="col-2 left-bur">
-            <div class="circle-button pointer text-center ml-2">
-                <i class="fa fa-angle-double-left fa-lg" aria-hidden="true"></i>
+            <div (click)="changeMenuSize()" class="circle-button pointer text-center ml-2">
+                <i [ngClass]="{'icon-up': menuSetting.size=='sm','icon-down':menuSetting.size!='sm'}" class="fa fa-dedent"
+                    aria-hidden="true"></i>
             </div>
         </div>
         <div class="col-10 text-right">
@@ -12,7 +13,7 @@
             <button class="mr-2" md-raised-button><i class="text-black fa fa-search fa-lg"></i></button>
             <button (click)="changeTheme()" [ngStyle]="{'color': theme.bgColor}" class="icon-hover mr-2" md-icon-button><i class="fa fa-question-circle fa-lg"></i></button>
             <button [ngStyle]="{'color': theme.bgColor}" class="icon-hover mr-2" md-icon-button><i class="fa fa-bell fa-lg"></i></button>
-            <button [ngStyle]="{'color': theme.bgColor}" class="icon-hover mr-2" md-icon-button><i class="fa fa-cog fa-spin fa-lg"></i></button>
+            <button [ngStyle]="{'color': theme.bgColor}" class="icon-hover mr-2" md-icon-button><i class="fa fa-cog fa-lg"></i></button>
         </div>
     </div>
 </div>
