--- a/src/app/system/components/headbar/headbar.component.scss
+++ b/src/app/system/components/headbar/headbar.component.scss
@@ -4,7 +4,7 @@
     /* box-shadow: 1px 2px 3px #d2d2d2; */
 }
 
-.left-bur{
+.left-bur {
     line-height: 60px;
 }
 
@@ -30,4 +30,34 @@
     line-height: 50px;
     box-shadow: 1px 2px 12px #e4e4e4;
     background-color: #fff;
+}
+
+.icon-up {
+    animation: icon-up 1s linear forwards;
+}
+
+.icon-down {
+    animation: icon-down 1s linear forwards;
+}
+
+@keyframes icon-up {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
+}
+
+@keyframes icon-down {
+    0% {
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
+    100% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
 }
