--- a/src/app/system/components/menu/menu.component.scss
+++ b/src/app/system/components/menu/menu.component.scss
@@ -4,6 +4,7 @@
 }
 
 .menu-title {
+    width:270px;
     line-height: 55px;
     height: 55px;
     white-space: nowrap;
@@ -12,6 +13,7 @@
 .menu-title img {
     width: 32px;
     height: 32px;
+    margin-left: 1.3rem !important;
 }
 
 .line {
@@ -21,6 +23,7 @@
 }
 
 .menu-manager-title {
+    width:270px;
     height: 60px;
     line-height: 60px;
     font-size: 16px;
@@ -31,6 +34,7 @@
 }
 
 .menu-manager-item {
+    width:270px;
     line-height: 50px;
     height: 50px;
     font-size: 16px;
@@ -48,6 +52,7 @@
 }
 
 .menu-item-main {
+    width:270px;
     height: 50px;
     line-height: 50px;
 }
@@ -65,6 +70,7 @@
 }
 
 .menu-item-child {
+    width:270px;
     line-height: 50px;
     height: 50px;
 }
