update login scss

--- a/src/app/system/components/login/login.component.html
+++ b/src/app/system/components/login/login.component.html
@@ -1,31 +1,34 @@
 <div class="pad">
-  <div class="window p-3">
-    <div class="window-header">
-      <table class="w-100">
-        <tbody>
-          <tr>
-            <td>
-              <h3><i class="fa fa-wechat"></i> Hello1024 Manager</h3>
-              <p>version 2.0.1 2017.8.29@xiaojian</p>
-            </td>
-            <td class="text-right">
-              <img width="60" height="60" src="/assets/image/photo.jpg" class="pull-right">
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="window p-3">
+        <div class="window-header">
+            <table class="w-100">
+                <tbody>
+                    <tr>
+                        <td>
+                            <h3><i class="fa fa-wechat"></i> Hello1024 Manager</h3>
+                            <p>version 2.0.1 2017.8.29@xiaojian</p>
+                        </td>
+                        <td class="text-right">
+                            <img width="60" height="60" src="/assets/image/photo.jpg" class="pull-right">
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div>
+            <div class="login-input">
+                <span class="fa fa-user-circle"></span><input type="text">
+            </div>
+            <div class="input-group">
+                <!-- <span class="input-group-addon rounded-0" id="basic-addon1">account</span> -->
+                <input type="text" class="form-control rounded-0 border-0" placeholder="mobile or emali" aria-describedby="basic-addon1">
+            </div>
+            <br>
+            <div class="input-group">
+                <!-- <span class="input-group-addon rounded-0" id="basic-addon1">password</span> -->
+                <input type="text" class="form-control rounded-0 border-0" placeholder="your password" aria-describedby="basic-addon1">
+            </div>
+        </div>
     </div>
-    <div>
-      <div class="input-group">
-        <!-- <span class="input-group-addon rounded-0" id="basic-addon1">account</span> -->
-        <input type="text" class="form-control rounded-0 border-0" placeholder="mobile or emali" aria-describedby="basic-addon1">
-      </div>
-      <br>
-      <div class="input-group">
-        <!-- <span class="input-group-addon rounded-0" id="basic-addon1">password</span> -->
-        <input type="text" class="form-control rounded-0 border-0" placeholder="your password" aria-describedby="basic-addon1">
-      </div>
-    </div>
-  </div>
-  <footer class="fixed-bottom text-center window-header"><i>Copyright © 2016 XiaoJian. All Rights Reserved.| 赣 ICP备16010587号</i></footer>
+    <footer class="fixed-bottom text-center window-header"><i>Copyright © 2016 XiaoJian. All Rights Reserved.| 赣 ICP备16010587号</i></footer>
 </div>
