login page complete

--- a/src/app/system/components/menu/menu.component.html
+++ b/src/app/system/components/menu/menu.component.html
@@ -19,7 +19,7 @@
                 <i class="fa fa-info-circle icon"></i>
                 <span class="ml-4">账户设置</span>
             </div>
-            <div class="menu-manager-item pl-4 hover-item">
+            <div (click)="signOut()" class="menu-manager-item pl-4 hover-item">
                 <i class="fa fa-sign-out icon"></i>
                 <span class="ml-4">退出登入</span>
             </div>
