--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="false" class="app-pad" [ngClass]="{'app-pad-small': minSetting.size=='sm'}">
+<div *ngIf="!isLoginPage()" class="app-pad" [ngClass]="{'app-pad-small': minSetting.size=='sm'}">
     <div class="app-pad-menu" [ngClass]="{'app-pad-menu-small': minSetting.size=='sm'}">
         <app-menu></app-menu>
     </div>
@@ -9,4 +9,4 @@
         </div>
     </div>
 </div>
-<app-login *ngIf="true"></app-login>
+<app-login *ngIf="isLoginPage()"></app-login>
