--- a/src/app/system/components/login/login.component.html
+++ b/src/app/system/components/login/login.component.html
@@ -1,34 +1,40 @@
 <div class="pad">
-    <div class="window p-3">
-        <div class="window-header">
-            <table class="w-100">
-                <tbody>
-                    <tr>
-                        <td>
-                            <h3><i class="fa fa-wechat"></i> Hello1024 Manager</h3>
-                            <p>version 2.0.1 2017.8.29@xiaojian</p>
-                        </td>
-                        <td class="text-right">
-                            <img width="60" height="60" src="/assets/image/photo.jpg" class="pull-right">
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="pad-window" [ngStyle]="{'background-color': bgColor}">
+        <div class="window p-3">
+            <div class="window-header">
+                <table class="w-100">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <h3><i class="fa fa-wechat"></i> Hello1024 Manager</h3>
+                                <p [hidden]="!!message">version 2.0.1 2017.8.29@xiaojian</p>
+                                <p [hidden]="!message" class="text-danger">{{message}}</p>
+                            </td>
+                            <td class="text-right">
+                                <img width="60" height="60" src="/assets/image/photo.jpg" class="pull-right">
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <form #loginForm="ngForm" (ngSubmit)="doLogin()">
+                <div class="login-input">
+                    <span class="fa fa-user pl-2 pr-2"></span>
+                    <input name="account" #account="ngModel" [ngModel]="loginParams.account" type="text" placeholder="mobile or emali" required>
+                </div>
+                <br>
+                <div class="login-input">
+                    <span class="fa fa-key pl-2 pr-2" aria-hidden="true"></span>
+                    <input name="password" #password="ngModel" [ngModel]="loginParams.password" type="password" placeholder="your password" required>
+                </div>
+                <br>
+                <div>
+                    <button type="submit" [disabled]="!loginForm.form.valid" class="btn btn-primary rounded-0 btn-lg btn-block">
+                        <i class="fa fa-sign-in mr-2" aria-hidden="true"></i>Login
+                    </button>
+                </div>
+            </form>
         </div>
-        <div>
-            <div class="login-input">
-                <span class="fa fa-user-circle"></span><input type="text">
-            </div>
-            <div class="input-group">
-                <!-- <span class="input-group-addon rounded-0" id="basic-addon1">account</span> -->
-                <input type="text" class="form-control rounded-0 border-0" placeholder="mobile or emali" aria-describedby="basic-addon1">
-            </div>
-            <br>
-            <div class="input-group">
-                <!-- <span class="input-group-addon rounded-0" id="basic-addon1">password</span> -->
-                <input type="text" class="form-control rounded-0 border-0" placeholder="your password" aria-describedby="basic-addon1">
-            </div>
-        </div>
+        <footer class="fixed-bottom text-center window-header"><i>Copyright © 2016 XiaoJian. All Rights Reserved.| 赣 ICP备16010587号</i></footer>
     </div>
-    <footer class="fixed-bottom text-center window-header"><i>Copyright © 2016 XiaoJian. All Rights Reserved.| 赣 ICP备16010587号</i></footer>
 </div>
