--- a/src/app/system/components/login/login.component.scss
+++ b/src/app/system/components/login/login.component.scss
@@ -1,26 +1,28 @@
 .pad {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+    width: 100%;
     height: 100vh;
     background-image: url('/assets/image/background.svg');
     background-repeat: no-repeat;
     background-size: cover;
 }
 
+.pad-window {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+}
+
 .window {
     width: 450px;
-    height: 300px;
+    height: 315px;
     background-color: rgba(255, 255, 255, 0.05);
 }
 
 .window-header {
     color: white;
     text-shadow: 1px 2px 3px #606060;
-}
-
-.form-control {
-    background-color: rgba(255, 255, 255, 0.4);
 }
 
 td {
@@ -42,6 +44,7 @@ img {
 
 .login-input input {
     height: 100%;
+    width: 350px;
     border-style: none;
     background-color: transparent;
 }
