--- a/src/app/system/components/menu/menu.component.scss
+++ b/src/app/system/components/menu/menu.component.scss
@@ -1,10 +1,22 @@
 .app-menu {
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.app-menu::-webkit-scrollbar-track {
+    background-color: white;
+    border-radius: 10px;
+}
+
+.app-menu::scrollbar-track {
+    background-color: white;
+    border-radius: 10px;
 }
 
 .menu-title {
-    width:270px;
+    width: 270px;
     line-height: 55px;
     height: 55px;
     white-space: nowrap;
@@ -23,7 +35,7 @@
 }
 
 .menu-manager-title {
-    width:270px;
+    width: 270px;
     height: 60px;
     line-height: 60px;
     font-size: 16px;
@@ -34,7 +46,7 @@
 }
 
 .menu-manager-item {
-    width:270px;
+    width: 270px;
     line-height: 50px;
     height: 50px;
     font-size: 16px;
@@ -52,7 +64,7 @@
 }
 
 .menu-item-main {
-    width:270px;
+    width: 270px;
     height: 50px;
     line-height: 50px;
 }
@@ -70,7 +82,7 @@
 }
 
 .menu-item-child {
-    width:270px;
+    width: 270px;
     line-height: 50px;
     height: 50px;
 }
