--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.min.css";
+@import '~ngx-toastr/toastr.css';
 
 /* font style */
 
