--- a/src/app/system/components/login/login.component.html
+++ b/src/app/system/components/login/login.component.html
@@ -11,7 +11,7 @@
                                 <p [hidden]="!message" class="text-danger">{{message}}</p>
                             </td>
                             <td class="text-right">
-                                <img width="60" height="60" src="/assets/image/photo.jpg" class="pull-right">
+                                <img width="60" height="60" src="{{bgImage}}" class="pull-right">
                             </td>
                         </tr>
                     </tbody>
