--- a/src/app/system/components/menu/menu.component.scss
+++ b/src/app/system/components/menu/menu.component.scss
@@ -16,10 +16,11 @@
 }
 
 .menu-title {
-    width: 270px;
-    line-height: 55px;
-    height: 55px;
+    width: 280px;
+    line-height: 60px;
+    height: 60px;
     white-space: nowrap;
+    font-size: 20px;
 }
 
 .menu-title img {
@@ -35,7 +36,7 @@
 }
 
 .menu-manager-title {
-    width: 270px;
+    width: 280px;
     height: 60px;
     line-height: 60px;
     font-size: 16px;
@@ -46,7 +47,7 @@
 }
 
 .menu-manager-item {
-    width: 270px;
+    width: 280px;
     line-height: 50px;
     height: 50px;
     font-size: 16px;
@@ -64,7 +65,7 @@
 }
 
 .menu-item-main {
-    width: 270px;
+    width: 280px;
     height: 50px;
     line-height: 50px;
 }
@@ -82,7 +83,7 @@
 }
 
 .menu-item-child {
-    width: 270px;
+    width: 280px;
     line-height: 50px;
     height: 50px;
 }
