--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,16 @@
     font-family: Microsoft YaiHei;
 }
 
+input,
+select,
+textarea,
+table,
+th,
+td,
+tr {
+    font-family: Microsoft YaiHei;
+}
+
 
 /*font style */
 
