--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,18 +10,18 @@
 /*default css*/
 
 * {
-    font-family: Microsoft YaiHei;
+    font-family: Microsoft YaiHei,KaiTi;
 }
 
-input,
-select,
-textarea,
-table,
-th,
-td,
-tr {
-    font-family: Microsoft YaiHei;
-}
+// input,
+// select,
+// textarea,
+// table,
+// th,
+// td,
+// tr {
+//     font-family: Microsoft YaiHei;
+// }
 
 
 /*font style */
