--- a/src/app/module/test/pages/home/home.component.html
+++ b/src/app/module/test/pages/home/home.component.html
@@ -5,7 +5,7 @@
             <div class="col-sm">
                 <div class="input-group">
                     <input (click)="file_input.click()" #file_title type="text" class="form-control rounded-0" placeholder="请选择要上传的文件" readonly>
-                    <input #file_input (change)="file=$event.target.files[0];file_title.value=file.name;testEvent($event.target.files)" type="file" [hidden]="true">
+                    <input #file_input (change)="file=$event.target.files[0];file_title.value=file.name;" type="file" [hidden]="true">
                     <span class="input-group-btn">
                         <button (click)="file_input.click()" class="btn btn-secondary rounded-0" type="button"><i class="fa fa-file-text"></i> 打开文件</button>
                     </span>
@@ -22,8 +22,15 @@
 </div>
 <br>
 <div class="card rounded-0">
-    <div class="card-header"><i class="fa fa-file-text"></i> sigle image input</div>
+    <div class="card-header"><i class="fa fa-file-text"></i> 单图选择-表单提交</div>
     <div class="card-block">
-        <app-image-input-form  [image]="image"></app-image-input-form>
+        <app-image-input-form [image]="image" (onChange)="getFile($event)"></app-image-input-form>
+    </div>
+</div>
+<br>
+<div class="card rounded-0">
+    <div class="card-header"><i class="fa fa-file-text"></i> 单图选择-异步上传</div>
+    <div class="card-block">
+        <app-image-input-upload></app-image-input-upload>
     </div>
 </div>
