--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,18 +10,19 @@
 /*default css*/
 
 * {
-    font-family: Microsoft YaiHei,KaiTi;
+    font-family: '微软雅黑', 'KaiTi';
 }
 
-// input,
-// select,
-// textarea,
-// table,
-// th,
-// td,
-// tr {
-//     font-family: Microsoft YaiHei;
-// }
+input,
+select,
+textarea,
+table,
+th,
+td,
+tr,
+button {
+    font-family: '微软雅黑', 'KaiTi';
+}
 
 
 /*font style */
