--- a/src/app/module/test/pages/home/home.component.html
+++ b/src/app/module/test/pages/home/home.component.html
@@ -36,8 +36,15 @@
 </div>
 <br>
 <div class="card rounded-0">
-    <div class="card-header"><i class="fa fa-file-text"></i> ...</div>
+    <div class="card-header"><i class="fa fa-file-text"></i> 多图选择-表单提交</div>
     <div class="card-block">
         <app-images-input-form [images]="image" (onChange)="getFiles($event)"></app-images-input-form>
+    </div>
+</div>
+<br>
+<div class="card rounded-0">
+    <div class="card-header"><i class="fa fa-file-text"></i> 多图选择-异步上传</div>
+    <div class="card-block">
+        <app-images-input-upload [images]="image" (onChange)="getFiles($event)" [config]="uploadConfig"></app-images-input-upload>
     </div>
 </div>
