--- a/src/app/tool/components/images-input-upload/images-input-upload.component.html
+++ b/src/app/tool/components/images-input-upload/images-input-upload.component.html
@@ -3,9 +3,11 @@
 <button class="{{resetBtnClassName}}" (click)="resetInput(input_file)" [innerHtml]="resetTitle"></button>
 <br>
 <div [sortablejs]="imagesArray" [sortablejsOptions]="options">
-    <!-- <img *ngFor="let item of imagesArray" class="img-thumbnail mt-2 mr-2" src="{{item.url}}" [ngStyle]="imageStyle"> -->
     <div *ngFor="let item of imagesArray;index as i" class="img-thumbnail img-thumbnail-pad d-inline-block  mt-2 mr-2">
-        <span class="close text-danger" (click)="removeImage(i)">&times;</span>
-        <div class="w-100 h-100 img-thumbnail-image" [ngStyle]="{'background-image': getUrl(item.url)}"></div>
+        <span *ngIf="!item.uploading" class="close text-danger" (click)="removeImage(i)">&times;</span>
+        <div *ngIf="!item.uploading" class="w-100 h-100 img-thumbnail-image" [ngStyle]="{'background-image': getUrl(item.url)}"></div>
+        <div class="span mt-2" *ngIf="item.uploading">
+            <div class="typing_loader"></div>
+        </div>
     </div>
 </div>
