--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,11 +21,15 @@
     width: 280px;
     height: 100%;
     position: fixed;
-    z-index: 4;
+    z-index: 5;
     top: 0;
     left: 0;
-    background-image: url('/assets/image/sidebar.jpg');
+    // background-image: url('/assets/image/sidebar.jpg');
     overflow-y: hidden;
     overflow-x: hidden;
     box-shadow: 1px 2px 3px black;
+}
+
+.app-pad-cotent {
+    margin-top: 80px;
 }
