--- a/src/app/system/components/headbar/headbar.component.html
+++ b/src/app/system/components/headbar/headbar.component.html
@@ -1,4 +1,4 @@
-<div class="head-bar">
+<div class="head-bar" [ngClass]="{'head-bar-min': menuSetting.size=='sm'}">
     <div class="row w-100">
         <div class="col-2 left-bur">
             <div (click)="changeMenuSize()" class="circle-button pointer text-center ml-2">
@@ -9,7 +9,7 @@
             <md-input-container color="warn">
                 <input mdInput>
             </md-input-container>
-            <button class="mr-2" md-raised-button><i class="text-black fa fa-search fa-lg"></i></button>
+            <button [ngStyle]="{'color': theme.bgColor}" class="icon-hover mr-2" md-icon-button><i class="fa fa-search fa-lg"></i></button>
             <button [ngStyle]="{'color': theme.bgColor}" class="icon-hover mr-2" md-icon-button><i class="fa fa-question-circle fa-lg"></i></button>
             <button [ngStyle]="{'color': theme.bgColor}" class="icon-hover mr-2" md-icon-button><i class="fa fa-bell fa-lg"></i></button>
             <button [ngStyle]="{'color': theme.bgColor}" class="icon-hover mr-2" md-icon-button><i class="fa fa-cog fa-lg"></i></button>
