--- a/src/app/system/components/headbar/headbar.component.scss
+++ b/src/app/system/components/headbar/headbar.component.scss
@@ -1,7 +1,17 @@
 .head-bar {
     height: 60px;
-    /* background-color: #eaeaea; */
-    /* box-shadow: 1px 2px 3px #d2d2d2; */
+    background-color: white;
+    box-shadow: 1px 2px 3px #d0d0d0;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    z-index: 4;
+    padding-left: 280px;
+}
+
+.head-bar-min {
+    padding-left: 80px !important;
 }
 
 .left-bur {
@@ -28,7 +38,7 @@
     height: 50px;
     width: 50px;
     line-height: 50px;
-    box-shadow: 1px 2px 12px #e4e4e4;
+    // box-shadow: 1px 2px 12px #e4e4e4;
     background-color: #fff;
 }
 
