--- a/src/app/system/components/headbar/headbar.component.html
+++ b/src/app/system/components/headbar/headbar.component.html
@@ -1,11 +1,15 @@
 <div class="head-bar" [ngClass]="{'head-bar-min': menuSetting.size=='sm'}">
-    <div class="row w-100">
-        <div class="col-2 left-bur">
-            <div (click)="changeMenuSize()" class="circle-button pointer text-center ml-2">
+    <div class="w-100 h-100 head-block">
+        <div class="w-50 left-bur h-100">
+            <span (click)="changeMenuSize()" class="circle-button pointer text-center ml-2">
                 <i [ngClass]="{'icon-up': menuSetting.size=='sm','icon-down':menuSetting.size!='sm'}" class="fa fa-dedent" aria-hidden="true"></i>
-            </div>
+            </span>
+            <nav class="d-inline p-0 m-0">
+                <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw" aria-hidden="true"></i>首页</a>
+                <span class="breadcrumb-item active"><i class="fa fa-bars fa-fw" aria-hidden="true"></i>菜单设置</span>
+            </nav>
         </div>
-        <div class="col-10 text-right">
+        <div class="w-50 right-bur text-right">
             <md-input-container color="warn">
                 <input mdInput>
             </md-input-container>
