--- a/src/app/system/components/menu/menu.component.scss
+++ b/src/app/system/components/menu/menu.component.scss
@@ -29,7 +29,11 @@
     margin-left: 1.3rem !important;
 }
 
-.line {
+.menu-list-active {
+    //background-color: rgba(0, 0, 0, 0.5);
+}
+
+.menu-line {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     width: 90%;
     margin: 0 auto;
