update image path

--- a/src/app/system/components/login/login.component.scss
+++ b/src/app/system/components/login/login.component.scss
@@ -1,7 +1,7 @@
 .pad {
     width: 100%;
     height: 100vh;
-    background-image: url('/assets/image/index.jpg');
+    background-image: url('/assets/image/card/2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
