--- a/src/app/module/test/pages/request-service/request-service.component.html
+++ b/src/app/module/test/pages/request-service/request-service.component.html
@@ -1,6 +1,10 @@
-<div class="card card-shadow rounded-0">
-  <div class="card-block">
-    <button (click)="tryUrlRequest()" class="btn btn-danger">URL REQUEST</button>
-    <pre>{{urlResponseData}}</pre>
-  </div>
+<div class="card rounded-0">
+    <div class="card-header"><i class="fa fa-internet-explorer fa-fw"></i>请求测试-请在控制台查看请求结果</div>
+    <div class="card-block">
+        <button (click)="tryUrlRequest()" class="btn btn-secondary mb-2">URL REQUEST</button>
+        <button (click)="tryGetRequest()" class="btn btn-info mb-2">GET REQUEST</button>
+        <button (click)="tryPostRequest()" class="btn btn-success mb-2">POST REQUEST</button>
+        <button (click)="tryPutRequest()" class="btn btn-primary mb-2">PUT REQUEST</button>
+        <button (click)="tryDeleteRequest()" class="btn btn-danger mb-2">DELETE REQUEST</button>
+    </div>
 </div>
